Change log for Defense Condition game project

Author(s): Ray Gardener (support@daylongraphics.com)
Repository: https://github.com/RayOfDaylon/Defcon
September 27, 2023


Messages system no longer retains redundant messages.

Player ship appears brighter when invincible.

Added invincibility toggle key to Help screen.

Invincibility implemented.

Dual cannon energy and invincibility reduce over time
(but not renewable yet. Use sparingly to avoid getting 
creamed in the later missions).

Renamed 'double guns' to 'dual cannon' in the Status panel.

Pressing 'I' toggles invincibility.
Still need to implement.

Added double guns and invincibility readouts to Status panel.
Still need to get their values to drop over time.

Restored smart bomb radius factor to 1.0.
0.75 was feasible but it just didn't feel fun/cool enough sometimes.

Moved CMaterializationTask from DefconPlayViewBase.cpp to materialization.h/.cpp.

Moved player ship destruction types from DefconPlayViewBase.cpp to playership.h/.cpp.

Moved Particle and ParticleGroups types to new file Common/ParticleGroup.h

Moved HasFlag template function to Daylon namespace in util_core.h.

Added IGameObject::MakeBullet method to abstract which bullet class a game object shoots.

Label of humans readout flashes when abductions are happening.

"Abduction in progress" messages removed except for last human.

Shield readout bar made thinner to match other readouts.

Renamed DURATION_IMPORTANT_MESSAGE to MESSAGE_DURATION_IMPORTANT 
and made it a preference. Added MESSAGE_DURATION preference 
for normal messages.

Pressing 'O' (not zero) will toggle double guns mode. 
When active, pressing Space will fire two laser bolts 
instead of one.

Game match stats track single vs. double shots.

Details page for pod includes notes on pod intersection.

#include fix for non-Unity build.

Game object IDs are generated by IMission instead of using static vars.
IMission ctor resets next ID to zero.

Synced to plugin to fix build issues.