@@ -1,4 +1,5 @@
 #include "powerup.h"
+#include "Common/util_color.h"
 
 
 Defcon::IPowerup::IPowerup()
@@ -8,10 +9,22 @@ Defcon::IPowerup::IPowerup()
 }
 
 
+void Defcon::IPowerup::Tick(float DeltaTime)
+{
+	Super::Tick(DeltaTime);
+
+	// Make our radar blip flash.
+	RadarColor.A = PSIN(Age * TWO_PI * 2);
+}
+
+// --------------------------------------------------------------------------------
+
 Defcon::CInvincibilityPowerup::CInvincibilityPowerup()
 {
 	ParentType = Type;
 	Type       = EObjType::POWERUP_INVINCIBILITY;
+
+	RadarColor = C_WHITE;
 
 	CreateSprite(Type);
 
